# build-algo

./: .gitignore  CITATION.cff  build_algorithm.py  gen_tree_triplets.py  gen_triplet_weights.py  multinomial.py  pyproject.toml  r-example.R  requirements.txt  weighted_build_algorithm.py
data/: alignment_1K_JC_1.phy  alignment_GTR_30_taxa_1K_sites_rtree1.phy  alignment_JC_30_taxa_1K_sites_rtree1.phy  rtree_30_tips_1.nwk
data/100K-ultrametric/: trees_50_taxa_100K_ultrametric.RData  trees_50_taxa_ultrametric_1.nwk  trees_50_taxa_ultrametric_10.nwk  trees_50_taxa_ultrametric_100.nwk  trees_50_taxa_ultrametric_1000.nwk  trees_50_taxa_ultrametric_101.nwk  trees_50_taxa_ultrametric_102.nwk  trees_50_taxa_ultrametric_103.nwk  trees_50_taxa_ultrametric_104.nwk  trees_50_taxa_ultrametric_105.nwk  trees_50_taxa_ultrametric_106.nwk  trees_50_taxa_ultrametric_107.nwk  trees_50_taxa_ultrametric_108.nwk  trees_50_taxa_ultrametric_109.nwk  trees_50_taxa_ultrametric_11.nwk  trees_50_taxa_ultrametric_110.nwk  trees_50_taxa_ultrametric_111.nwk  trees_50_taxa_ultrametric_112.nwk  trees_50_taxa_ultrametric_113.nwk  trees_50_taxa_ultrametric_114.nwk  trees_50_taxa_ultrametric_115.nwk  trees_50_taxa_ultrametric_116.nwk  trees_50_taxa_ultrametric_117.nwk  trees_50_taxa_ultrametric_118.nwk  trees_50_taxa_ultrametric_119.nwk  trees_50_taxa_ultrametric_12.nwk  trees_50_taxa_ultrametric_120.nwk  trees_50_taxa_ultrametric_121.nwk  trees_50_taxa_ultrametric_122.nwk  trees_50_taxa_ultrametric_123.nwk  trees_50_taxa_ultrametric_124.nwk  (+970 more)
src/build_algo/: __init__.py  (+8 more)
test_data/: test-triplets-1.txt
(+4003 files in other folders)
